--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -9,7 +9,7 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="EFDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=BookStore; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=BookStore; Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-BookStore-20150330185755;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-BookStore-20150330185755.mdf" />
   </connectionStrings>
   <appSettings>
@@ -18,7 +18,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="enableSimpleMembership" value="false"/>
+    <add key="enableSimpleMembership" value="false" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -41,19 +41,21 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <!--<membership defaultProvider="MyMembershipProvider">
+    
+    <membership defaultProvider="MyMembershipProvider">
       <providers>
         <clear />
         <add name="MyMembershipProvider" type="BookStore.Infrastructure.CustomMembershipProvider" />
       </providers>
     </membership>
+    
     <roleManager enabled="true" defaultProvider="MyRoleProvider">
       <providers>
         <clear />
         <add name="MyRoleProvider" type="BookStore.Infrastructure.CustomRoleProvider" />
       </providers>
-    </roleManager>-->
-    <roleManager enabled="true" />
+    </roleManager>
+    
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
