--- a/BookStore.DAL.EntityFramework/BookStore.DAL.EntityFramework.csproj
+++ b/BookStore.DAL.EntityFramework/BookStore.DAL.EntityFramework.csproj
@@ -40,6 +40,9 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.3.2.0.0\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
