--- a/BookStore.Domain/packages.config
+++ b/BookStore.Domain/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
 </packages>
