--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -9,8 +9,9 @@
 
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  
   <connectionStrings>
-    <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=BookStore; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Book; Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
