--- a/BookStore/packages.config
+++ b/BookStore/packages.config
@@ -37,6 +37,7 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
   <package id="Zlib.Portable" version="1.10.0" targetFramework="net45" />
 </packages>
