--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -405,6 +405,7 @@
     <Content Include="Views\Book\BookDetails.cshtml" />
     <Content Include="Views\Shared\BookHeader.cshtml" />
     <Content Include="Views\Shared\Comment.cshtml" />
+    <Content Include="Views\Book\BookRating.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
