--- a/BookStore/Web.config
+++ b/BookStore/Web.config
@@ -39,7 +39,7 @@
   </log4net>
 
   <connectionStrings>
-    <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=BookStore; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="EfDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=Book; Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
