--- a/BookStore/BookStore.WebUI.csproj
+++ b/BookStore/BookStore.WebUI.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Models\BookListViewModel.cs" />
     <Compile Include="Models\BookViewModel.cs" />
     <Compile Include="Models\CommentModel.cs" />
+    <Compile Include="Models\Fb2Parser.cs" />
     <Compile Include="Models\RegisterViewModel.cs" />
     <Compile Include="Models\TextViewModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
@@ -285,7 +286,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\addCommet.js" />
-    <Content Include="Scripts\AddField.js" />
+    <Content Include="Scripts\addField.js" />
     <Content Include="Scripts\bootstrap3-typeahead.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js.map">
